--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="google-site-verification" content="8_S5V1F-QRpIMCksRvCENgnaF-mHxnMDNh9fMJ5ADTI" />
 <title>Car Unlock Service Near Me</title>
 
 <style>
