--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Car Unlock Service Near Me</title>
+    <meta name="google-site-verification" content="8_S5V1F-QRpIMCksRvCENgnaF-mHxnMDNh9fMJ5ADTI" />
 
 <style>
     body {
